-Clean up in code
-Add setFocus in different dialog box

1999-12-30 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add i18n where I forgot to install it
-Now you can validate MultiRow in "Cell Layout"

2000-01-07 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Bug fix : When you copy a value in a cell all is recalcing
(bug that David Faure found. thanks)

Summary 2000-01-07 ->2000-02-06
Shaumann Port KSpread and all koffice to new kpart


2000-02-06 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add new Function : conditional
-When you want to define a value for example you want to see all cells which
are a value equal to 5 you can attribut a color and a font.

=>there are three conditions.
There is against a lot of work (save condition, reduce memory to store condition,
and put the old condition when you active dialog.
=> I try to do this thinks this week if I have time

2000-02-11 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Improved : Relational cell attribut
Now parameter are setting when you open conditional dialog.
Reduce memory to store condition.

2000-02-12 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-bug fix

2000-02-18 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now Relational cell attribut is saving in file

2000-02-19 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can show or hide grid
-Fix bug report by Michael Koch (use KNumInput when you resize column or row)
-Bug fix

2000-02-20 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add new fonctions : AND, OR, MOD, BINO, INVBINO
 