@@ -9,5 +9,5 @@ toolbar_DATA = abort.png bold.png center.png chart.png colin.png \
 	borderbottom.png  borderleft.png   borderright.png bordertop.png \
 	borderall.png borderoutline.png borderremove.png black-sum.png   \
         borderfall.png  borderhorizontal.png   borderup.png  bordervertical.png \
-        borderinside.png
+        borderinside.png underline.png
 
